<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/back_ground_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:fontFamily="@font/academic_font"
                android:gravity="center"
                android:textSize="60dp"

                android:text="@string/app_title"
                android:textColor="@color/title_color" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:layout_marginTop="15dp"

                android:text="@string/motivational_quote"
                android:textColor="@color/quote_color"

                android:textSize="15dp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"

                android:text="@string/my_courses"
                android:textColor="@color/my_courses"
                android:textSize="25dp"

                android:textStyle="bold"
        />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="7dp"

                android:text="@string/csc_317"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="@font/class_titles_font"
                android:textColor="@color/class_names_color"

 />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="335dp"
                android:layout_height="145dp"

                android:layout_gravity="center"

                android:src="@drawable/csc_317_logo"


                 />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColor="@color/class_desc_color"

                android:layout_marginTop="10dp"


                android:textAlignment="viewStart"
                android:gravity="start"

                android:text="@string/csc_317_description"
                android:fontFamily="@font/noticia_text_bold"/>


            <TextView
                android:id="@+id/textView4"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="7dp"
                android:textSize="20dp"
                android:gravity="center"

                android:text="@string/csc_352"
                android:fontFamily="@font/class_titles_font"
                android:textStyle="bold"
                android:textColor="@color/class_names_color"

         />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="336dp"
                android:layout_height="176dp"
                android:src="@drawable/csc_352_logo"
                android:layout_gravity="center"

 />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"


                android:fontFamily="@font/noticia_text_bold"
                android:textColor="@color/class_desc_color"

                android:text="@string/csc_352_description"
            />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="7dp"

                android:textSize="20dp"
                android:gravity="center"
                android:fontFamily="@font/class_titles_font"
                android:textStyle="bold"
                android:textColor="@color/class_names_color"

                android:text="@string/csc_343" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="337dp"
                android:layout_height="164dp"

                android:src="@drawable/csc_343_logo"
                android:layout_gravity="center"

                android:paddingTop="5dp"
 />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"

                android:fontFamily="@font/noticia_text_bold"
                android:textColor="@color/class_desc_color"

                android:text="@string/csc_343_description"
     />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="7dp"

                android:gravity="center"
                android:text="@string/geos_251"
                android:textColor="@color/class_names_color"

                android:textSize="20dp"
                android:fontFamily="@font/class_titles_font"
                android:textStyle="bold"
               />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="332dp"
                android:layout_height="179dp"

                android:src="@drawable/geos_251_logo"
                android:layout_gravity="center"

                android:paddingTop="5dp"
           />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingTop="5dp"

                android:fontFamily="@font/noticia_text_bold"
                android:textColor="@color/class_desc_color"

                android:text="@string/geos_251_description"
       />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="7dp"
                android:layout_marginTop="10dp"

                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/class_names_color"
                android:text="@string/reli_367"
                android:fontFamily="@font/class_titles_font"
                android:textStyle="bold"
/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="326dp"
                android:layout_height="204dp"
                android:layout_gravity="center"

                android:src="@drawable/yoga_logo"

                android:layout_marginTop="5dp"
         />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"

                android:fontFamily="@font/noticia_text_bold"
                android:textColor="@color/class_desc_color"

                android:text="@string/reli_367_description"
          />


            <!--
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.498"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />
            -->


    </LinearLayout>
    </ScrollView>
